applications/pgadmin/base/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pgadmin
  labels:
    app.kubernetes.io/name: pgadmin
