applications/pgadmin/base/resources/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-pgadmin
  namespace: pgadmin
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: istio-gateway
      namespace: istio-system
      sectionName: https-pgadmin
  hostnames:
    - pgadmin.svc.home.arpa
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: pgadmin
          namespace: pgadmin
          port: 80
          weight: 1
